--- a/assets/css/dotMeCaptcha.css
+++ b/assets/css/dotMeCaptcha.css
@@ -1,46 +1,56 @@
 body {
   font-family: system, -apple-system, '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
   color: #fff;
-  background-color: #224f98b0;
+  background-color: #224f98;
   text-align: center;
   font-size: 12px;
   overflow: hidden;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-#timer {
-  color: white;
-  opacity: 0.7;
-  position: absolute;
-  left: 0px;
-  top: 30px;
-  width: 10px;
-  height: 53px;
-  font-size: 18px;
-  text-decoration: none;
-  transform: rotate(90deg);
-  font-weight: bold;
+  border-radius: 10px;
 }
 
 .hidden{
   display: none !important;
 }
 
+#dvImgCaptcha{
+  
+  position: absolute;
+  width: 87%;
+  height: 100%;
+  margin-top: 6%;
+}
+
+#dvImgCaptcha img{
+  width: 253px;
+  height: auto;
+  border-radius: 10px;
+}
+
+
 #menuFloating{
   position: absolute;
-  bottom: -1px;
-  right: 9px;
+  top: 22px;
+  right: 20px;
+  width: 18px;
 }
 
 #btnShow {
   width: auto;
   height: auto;
 }
+#btnRefresh img {
+  margin-bottom: 10px;
+}
 
-#btnShow img, #btnHide img{
-  width: 16px;
+#btnRefresh img{
+  width: 23px;
   height: auto;
+}
+
+#btnHide img{
+  width: 18px;
+  height: auto;
+  margin-left: 3px;
 }
 
 input::-webkit-inner-spin-button {
@@ -50,6 +60,6 @@ input::-webkit-inner-spin-button {
 
 #loader{
   margin-left: 8px;
-  margin-top: 12px;
+  margin-top: 10px;
   height: 50px;
 }
