--- a/assets/css/dotMeMain.css
+++ b/assets/css/dotMeMain.css
@@ -25,7 +25,7 @@ body.timer-mode {
   opacity: 0.7;
   position: relative;
   left: 0px;
-  top: 44px;
+  top: 47px;
   width: 70px;
   height: 0px;
   font-size: 21px;
@@ -197,6 +197,20 @@ input::-webkit-inner-spin-button {
 
 #loader{
   margin-left: 8px;
-  margin-top: 10px;
+  margin-top: 17px;
   height: 50px;
+}
+
+.imgPlay{
+  position: absolute;
+  width: 18px;
+  top: 6px;
+  left: 10px;
+}
+
+.imgPause{
+    position: absolute;
+    width: 15px;
+    top: 7px;
+    left: 10px;
 }
