--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -11,6 +11,10 @@
     border-radius: 50%;
     animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
   }
+  .lds-ripple.red div {
+    border: 5px solid #ec1515;
+  }
+
   .lds-ripple div:nth-child(2) {
     animation-delay: -0.3s;
   }
